
  * Use "buffer" to prevent "find" still running when "lsof" is started by
    "xargs". Add dependency and build-dependency (for test-suite) on "buffer".
  * Fix trailing slashes on revert (GitHub issue #5, thanks Johan van den
    Dorpe!)
  * debian/control: Apply wrap-and-sort
  * Refactor test suite
    + Some tests use Test::Differences now. Add as build dependency.

 -- Axel Beckert <abe@debian.org>  Thu, 11 Oct 2012 21:23:31 +0200

unburden-home-dir (0.3.1.2) unstable; urgency=low

  * Option -F doesn't have a parameter, so don't let it consume one (which
    could be another option which then will be ignored, e.g. the dry-run
    option -n; Closes: #691619)
  * Fix comment about usage in etc/unburden-home-dir — it's no more a POSIX
    shell fragment, but parsed by Config::File. (Closes: #690266)
  * Minor bugfix for example config files (Closes: #690268)
  * Update $VERSION in bin/unburden-home-dir which had been forgotten
    since 0.3. Add test so that this doesn't happen again. (Closes: #690265)
  * Add missing options to --help message and reorder it slightly.
  * More documentation updates and fixes.

 -- Axel Beckert <abe@debian.org>  Sat, 27 Oct 2012 17:25:44 +0200

unburden-home-dir (0.3.1.1) unstable; urgency=low

  * Better and more documentation

 -- Axel Beckert <abe@debian.org>  Wed, 10 Oct 2012 16:14:29 +0200

unburden-home-dir (0.3.1) unstable; urgency=low

  * Make test suite check if lsof is available or not and expect different
    output in both cases. (Closes: #678780)
  * Use which('lsof') from File::Which instead of `which lsof`
    + Add dependency and build-dependency on libfile-which-perl
  * Use a copy of README.md named just README to be installed in the
    Debian binary package to avoid any associations with Linux' software
    RAID. (Closes: #678630)
  * Minor refactoring of t/undo.t for not confusing syntax highlighting

 -- Axel Beckert <abe@debian.org>  Mon, 25 Jun 2012 15:34:34 +0200
